--- a/client/public/sass/trackMyToken.scss
+++ b/client/public/sass/trackMyToken.scss
@@ -77,7 +77,7 @@ body{
   }
 }
 }
-header{
+header,aside{
     @include header();
     .bng1{
       @include bng1-md();
@@ -116,11 +116,13 @@ header{
     }
   }
   aside{
-    width: 100%;
-    height: 625px;
-    background: url(../images/welcome.jpg)
-    no-repeat center center fixed;
-    background-size: cover;
+    @include aside();
+  }
+  footer{
+    background-color: bb(bb3);
+    h1{
+      font-family: 'Open Sans Condensed', sans-serif;
+    }
   }
 }
 
