--- a/client/public/sass/_mixins.scss
+++ b/client/public/sass/_mixins.scss
@@ -144,3 +144,29 @@
     font-family: 'Noto Sans KR', sans-serif;
     font-size: 1em;
 }
+@mixin edrgt(){
+    background-color: #fff;
+    color:  #568701;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 1.25em;
+    border: 2px solid  #568701;
+}
+@mixin edrgtHover(){
+  background-color: #568701;
+  color: #fff;
+  font-family: 'Noto Sans KR', sans-serif;
+  font-size: 1.25em;
+}
+@mixin edrgt-xs(){
+  background-color: #fff;
+  color: rr(rr1);
+  font-family: 'Noto Sans KR', sans-serif;
+  font-size: 1em;
+  border: 2px solid rr(rr1);
+}
+@mixin edrgtHover-xs(){
+    background-color: rr(rr1);
+    color: #fff;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 1em;
+}
