Done with doctorsList component

--- a/client/public/css/trackMyToken.css
+++ b/client/public/css/trackMyToken.css
@@ -213,7 +213,7 @@ body .adc {
   body .hre {
     color: #568701; }
   body .adc {
-    background-color: #4834DF; }
+    background-color: #3C40C6; }
     body .adc .adcbt {
       background-color: #218F76;
       color: #fff;
