--- a/client/public/sass/trackMyToken.scss
+++ b/client/public/sass/trackMyToken.scss
@@ -243,7 +243,7 @@ header,aside{
         color: #568701;
       }
       .adc{
-        background-color: #4834DF;
+        background-color: bb(bb3);
       .adcbt{
         @include adcbt-lg();
       }
