Done with some dashboard stuff

--- a/client/public/css/trackMyToken.css
+++ b/client/public/css/trackMyToken.css
@@ -29,37 +29,37 @@ body .navbar .nav-item .idbt:hover {
 body .navbar .nav-item .fa-lightbulb-o {
   font-size: 1.4em;
   color: #EEC213; }
-body header, body aside {
+body header, body aside, body .lgerr {
   width: 100%;
   height: 725px;
   background: url("../images/banner.jpg") no-repeat center center fixed;
   background-size: cover; }
-  body header .bng1, body aside .bng1 {
+  body header .bng1, body aside .bng1, body .lgerr .bng1 {
     font-size: 1.8em;
     font-family: 'Catamaran', sans-serif; }
-  body header .bng2, body aside .bng2 {
+  body header .bng2, body aside .bng2, body .lgerr .bng2 {
     font-size: 2.5em;
     font-family: 'Tinos', serif;
     color: #218F76; }
-  body header .idbt2, body aside .idbt2 {
+  body header .idbt2, body aside .idbt2, body .lgerr .idbt2 {
     border: 2px solid #fff;
     color: #fff;
     background-color: #c22026;
     font-weight: bolder;
     font-family: 'Catamaran', sans-serif; }
-  body header .idbt2:hover, body aside .idbt2:hover {
+  body header .idbt2:hover, body aside .idbt2:hover, body .lgerr .idbt2:hover {
     border: 2px solid #c22026;
     color: #c22026;
     background-color: #fff;
     font-weight: bolder;
     font-family: 'Catamaran', sans-serif; }
-  body header .idbt3, body aside .idbt3 {
+  body header .idbt3, body aside .idbt3, body .lgerr .idbt3 {
     border: 2px solid #fff;
     color: #fff;
     background-color: black;
     font-weight: bolder;
     font-family: 'Catamaran', sans-serif; }
-  body header .idbt3:hover, body aside .idbt3:hover {
+  body header .idbt3:hover, body aside .idbt3:hover, body .lgerr .idbt3:hover {
     border: 2px solid black;
     color: black;
     background-color: #fff;
