--- a/client/public/sass/_mixins.scss
+++ b/client/public/sass/_mixins.scss
@@ -194,3 +194,9 @@
   font-family: 'Tinos', serif;
   font-size: 1.25em;
 }
+@mixin estu(){
+  background-color: #009688;
+  color: #fff;
+  font-family: 'Catamaran', sans-serif;
+  font-size: 1.25em;
+}
