Started with patients section

--- a/client/public/sass/trackMyToken.scss
+++ b/client/public/sass/trackMyToken.scss
@@ -166,8 +166,19 @@ header,aside,.lgerr{
 .estu{
   @include estu();
 }
+.tlef{
+@include tlef();
+.bhabi{
+@include bhabhi();
 }
-
+.ban{
+  font-family: 'Dancing Script', cursive;
+}
+.tap{
+  font-family: 'Tinos', serif;
+}
+}
+}
 
 // for device of sm width
 @media (min-width:576px){
